chap-12/httpbin-gw-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: httpbin-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
  - "10.199.75.64"
  gateways:
  - httpbin-gateway
  - mesh # also direct traffic in the mesh with the same VirtualService
  http:
  - route:
    - destination:
        host: httpbin
        port:
          number: 8000
