chap-12/httpbin-vs-v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
  - "*"
  gateways:
  - httpbin-gateway
  - mesh # also direct traffic in the mesh with the same VirtualService
  http:
  - route:
    - destination:
        host: httpbin
        subset: v1
        port:
          number: 8000
